<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/jomnu"
                android:layout_marginLeft="30sp"
                android:textColor="@color/yellow"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />
        </LinearLayout>

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shadowColor="#A59E5E"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white" />
        <TextView
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="mihango"
            android:password="true" />

        <Button
            android:id="@+id/enter"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter" />
    </LinearLayout>
</ScrollView>